--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
+    <title>e-Collecting</title>
 
     <script type="module" src="/build/e-collecting.esm.js"></script>
     <script nomodule src="/build/e-collecting.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <e-collecting></e-collecting>
   </body>
 </html>
