feat: render a button with a default text

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
     <script nomodule src="/build/e-collecting.js"></script>
   </head>
   <body>
+    <h1>Default text</h1>
+
     <e-collecting></e-collecting>
+
+    <h1>Custom text</h1>
+
+    <e-collecting> Hello World </e-collecting>
   </body>
 </html>
