--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <body>
     <h1>Default text</h1>
 
-    <e-collecting owlly-id="28c72f42-5daa-4a28-b39d-b51b203c3740"></e-collecting>
+    <e-collecting owlly-id="mkro4noxKW9CNGE7mGFE"></e-collecting>
 
     <h2>Owlly Id</h2>
 
     <div style="display: flex">
-      <input name="owllyId" value="28c72f42-5daa-4a28-b39d-b51b203c3740" />
+      <input name="owllyId" value="mkro4noxKW9CNGE7mGFE" />
 
       <button type="button" onclick="updateOwllyId()">Update</button>
     </div>
