chore: id and uri of the function

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <h2>Owlly Id</h2>
 
     <div style="display: flex">
-      <input name="owllyId" value="mkro4noxKW9CNGE7mGFE" />
+      <input name="owllyId" value="mkro4noxKW9CNGE7mGFE13232" />
 
       <button type="button" onclick="updateOwllyId()">Update</button>
     </div>
@@ -31,7 +31,7 @@
       }
     </script>
 
-    <h1>Custom text</h1>
+    <h1>Custom text and disabled</h1>
 
     <e-collecting> Hello World </e-collecting>
   </body>
