feat: lazy load owlly function request

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <script nomodule src="/build/e-collecting.js"></script>
   </head>
   <body>
+    <div style="display: block; height: 2000px; background: purple"><h1>Scroll down to give it a try!</h1></div>
+
     <h1>Default text</h1>
 
     <e-collecting owlly-id="mkro4noxKW9CNGE7mGFE"></e-collecting>
