feat: style button and add logo

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,10 @@
       }
     </script>
 
+    <h1>Dark style</h1>
+
+    <e-collecting owlly-id="mkro4noxKW9CNGE7mGFE" mode="dark"></e-collecting>
+
     <h1>Custom text and disabled</h1>
 
     <e-collecting> Hello World </e-collecting>
