--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <h1>Default text</h1>
 
-    <e-collecting owlly-id="mkro4noxKW9CNGE7mGFE"></e-collecting>
+    <owlly-collect owlly-id="mkro4noxKW9CNGE7mGFE"></owlly-collect>
 
     <h2>Owlly Id</h2>
 
@@ -26,7 +26,7 @@
     <script type="text/javascript">
       function updateOwllyId() {
         const input = document.querySelector('input:first-of-type');
-        const eCollecting = document.querySelector('e-collecting:first-of-type');
+        const eCollecting = document.querySelector('owlly-collect:first-of-type');
         if (input && eCollecting) {
           eCollecting.owllyId = input.value;
         }
@@ -35,10 +35,10 @@
 
     <h1>Dark style</h1>
 
-    <e-collecting owlly-id="mkro4noxKW9CNGE7mGFE" mode="dark"></e-collecting>
+    <owlly-collect owlly-id="mkro4noxKW9CNGE7mGFE" mode="dark"></owlly-collect>
 
     <h1>Custom text and disabled</h1>
 
-    <e-collecting> Hello World </e-collecting>
+    <owlly-collect> Hello World </owlly-collect>
   </body>
 </html>
