style: display active button

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
 
     <h1>Custom text and disabled</h1>
 
-    <owlly-collect> Hello World </owlly-collect>
+    <owlly-collect>
+      <span>Hello World</span>
+    </owlly-collect>
   </body>
 </html>
