feat: custom lang

--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,9 @@
     <owlly-collect>
       <span>Hello World</span>
     </owlly-collect>
+
+    <h1>Custom lang</h1>
+
+    <owlly-collect custom-lang="it"> </owlly-collect>
   </body>
 </html>
