--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
 
     <h1>Default text</h1>
 
-    <owlly-collect owlly-id="mkro4noxKW9CNGE7mGFE"></owlly-collect>
+    <owlly-collect owlly-id="vrrYZoolx2XSy23RW63f"></owlly-collect>
 
     <h2>Owlly Id</h2>
 
     <div style="display: flex">
-      <input name="owllyId" value="mkro4noxKW9CNGE7mGFE13232" />
+      <input name="owllyId" value="vrrYZoolx2XSy23RW63f" />
 
       <button type="button" onclick="updateOwllyId()">Update</button>
     </div>
@@ -35,7 +35,7 @@
 
     <h1>Dark style</h1>
 
-    <owlly-collect owlly-id="mkro4noxKW9CNGE7mGFE" mode="dark"></owlly-collect>
+    <owlly-collect owlly-id="vrrYZoolx2XSy23RW63f" mode="dark"></owlly-collect>
 
     <h1>Custom text and disabled</h1>
 
